# SIH28

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_CHECKLIST.md  AUTHENTICATION_COMPARISON.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_UPGRADE_SUMMARY.md  AUTH_SECURITY_COMPLETE.md  CI-CD-SETUP.md  CI-CD-STATUS.md  CLEANUP_SUMMARY.md  COMPLETE_SOLUTION.md  CONFLICT_DASHBOARD_IMPLEMENTATION.md  CONSOLE_PROGRESS_REMOVAL.md  CPSAT_FIX_IMPLEMENTED.md  CPSAT_QUALITY_FIX.md  CRITICAL_BUGS_FIXED.md  CRITICAL_BUG_FIX.md  CRITICAL_FIXES.md  CROSS_ENROLLMENT_IMPLEMENTATION.md  DEPARTMENT_SPECIFIC_SLOTS_FIX.md  DEPARTMENT_VIEW_ARCHITECTURE.md  DESIGN_SYSTEM.md  Dockerfile  ENTERPRISE_CACHING_SYSTEM.md  ENTERPRISE_FAILURE_HANDLING.md  FIXES_APPLIED.md  FRONTEND_UPDATES.md  GPU_IMPLEMENTATION_COMPLETE.md  GPU_RAM_OPTIMIZATION.md  GPU_THREAD_SAFETY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOADING_IMPROVEMENTS_SUMMARY.md  LOG_ANALYSIS.md  MIGRATION_GUIDE.md  NEP_2020_TIMETABLE_ARCHITECTURE.md  OPTIMIZATION_IMPLEMENTATION_STATUS.md  OPTIMIZATION_STATUS.md  (+31 more)
backend/: .env  REDIS_CACHING.md  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/django/: .env.example  CREATE_MIGRATION.md  add_indexes.py  celery_config.py  check_bhu_structure.py  check_db_config.py  check_indexes.py  check_roles.py  check_tables.py  clear_cache.py  conftest.py  create_admin.py  create_mt_tables.py  debug_timetable.py  drop_old_tables.py  fix_subject_updates.py  mark_migration.py  pytest.ini  requirements.txt  reset_migrations.py  update_role.py  verify_indexes.py
backend/django/academics/: __init__.py  analytics_service.py  analytics_views.py  apps.py  attendance_models.py  attendance_views_admin.py  bulk_enrollment_views.py  celery_tasks.py  conflict_views.py  cross_enrollment_service.py  cross_enrollment_views.py  enrollment_models.py  enrollment_views.py  generation_views.py  mixins.py  models.py  models_legacy.py  multi_tenant_models.py  optimized_views.py  performance_middleware.py  scalable_enrollment.py  serializers.py  tasks.py  timetable_config_models.py  timetable_config_serializers.py  timetable_config_views.py  timetable_models.py  timetable_serializers.py  timetable_views.py  urls.py  views.py  views_optimized.py  workflow_views.py
backend/django/academics/migrations/: 0001_initial.py  0002_add_timetable_workflow.py  0003_alter_fixedslot_created_by_and_more.py  0004_alter_fixedslot_created_by_and_more.py  0007_timetableconfiguration.py  0008_add_rbac_roles.py  0009_add_generation_job_indexes.py  0014_substitution_models.py  0015_add_lookup_indexes.py  0016_recalculate_variants_academic_formula.py
backend/django/academics/models/: __init__.py  faculty.py  student.py  substitution.py  timetable.py
backend/django/academics/services/: __init__.py  department_view_service.py  generation_job_service.py
backend/django/academics/views/: __init__.py  conflict_views.py  dashboard_views.py  logs_views.py  substitution_views.py  timetable_variant_views.py  timetable_views.py  workflow_views.py
backend/django/apps/approvals/: models.py
backend/django/apps/classrooms/: models.py  urls.py  views.py
backend/django/apps/courses/: models.py  urls.py  views.py
backend/django/apps/preferences/: models.py
backend/django/apps/reports/: models.py
backend/django/apps/timetables/: models.py  urls.py  views.py
backend/django/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/django/config/: urls.py
backend/django/config/settings/: base.py  local.py
backend/django/core/: audit_logging.py  authentication.py  cache_service.py  csrf_middleware.py  hardware_detector.py  permissions.py  rbac.py  rls_middleware.py  rls_setup.py  storage.py  tenant_limits.py  views.py
backend/django/erp/: celery_settings.py  settings.py  urls.py
backend/django/tests/: __init__.py  conftest.py
backend/django/tests/api/: __init__.py
backend/django/tests/integration/: __init__.py
backend/django/tests/unit/: __init__.py
backend/fastapi/: API_TESTING_GUIDE.md  CP_SAT_FIX_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  Dockerfile  ENTERPRISE_FEATURES.md  ERROR_FIX_SUMMARY.md  HARDWARE_ADAPTIVE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MAXIMUM_PERFORMANCE.md  MEMORY_FIX_QUICK_GUIDE.md  PERFORMANCE_FIXES.md  PROGRESS_TRACKING_FIX.md  RL_CONFLICT_FIX.md  config.py  fastapi_logs.txt  hardware_profile.json  main.py  pytest.ini  requirements.txt  timeout_handler.py  uvicorn.conf.py
backend/fastapi/api/: __init__.py  deps.py
backend/fastapi/api/middleware/: cors.py  error_handler.py  rate_limiting.py
backend/fastapi/api/routers/: __init__.py  cache.py  conflicts.py  generation.py  health.py  websocket.py
backend/fastapi/behavioral_data/: Banaras Hindu University_behavioral.json
backend/fastapi/core/: __init__.py  lifespan.py  logging_config.py  memory_monitor.py
backend/fastapi/core/patterns/: __init__.py  bulkhead.py  circuit_breaker.py  saga.py
backend/fastapi/engine/: __init__.py  adaptive_executor.py  celery_tasks.py  context_engine.py  cpsat_old.py  distributed_tasks.py  dqn_trainer.py  ga_old.py  hardware_detector.py  incremental_update.py  memory_manager.py  multi_gpu.py  orchestrator.py  parallel_config.py  progress_tracker.py  rate_limiter.py  resource_monitor.py  rl_old.py  rl_transfer_learning.py  stage1_clustering.py  stage2_cpsat.py  stage2_ga.py  stage2_greedy.py  stage2_hybrid.py  stage3_caql.py  stage3_rl.py  strategy_selector.py  variant_generator.py
backend/fastapi/models/: __init__.py  progress_models.py  request_models.py  response_models.py  timetable_models.py
backend/fastapi/qtables/: Banaras Hindu University.pkl
backend/fastapi/services/: conflict_resolution_service.py  department_preference_service.py  department_view_service.py
backend/fastapi/src/: main.py
backend/fastapi/tests/: __init__.py  conftest.py  run_tests.py
backend/fastapi/utils/: __init__.py  cache_manager.py  django_client.py  memory_cleanup.py  metrics.py  progress_tracker.py  redis_pubsub.py
(+339 files in other folders)
